//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  firstName String
  lastName String
  email String [unique, not null]
  password String [not null]
  dob DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  role Role [not null, default: 'USER']
  hashedRt String
  profileImage String
  trainings Training [not null]
  activeTrainingId String
  trainingsCreated Training [not null]
  exerciseReferencesCreated ExerciseReference [not null]
}

Table Training {
  id String [pk]
  name String
  trainingGroups TrainingGroup [not null]
  user User [not null]
  userId String [not null]
  daysInWeek Int [not null]
  done Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  objective String
  createdBy User [not null]
  createdByUserId String [not null]
}

Table TrainingGroup {
  id String [pk]
  key String [not null]
  exercises Exercise [not null]
  combinedExercises CombinedExercise [not null]
  done Boolean [not null, default: false]
  doneAt DateTime
  groups Group[] [not null]
  training Training [not null]
  trainingId String [not null]
  number Int [not null]
  active Boolean [not null, default: false]
  activeAt DateTime

  indexes {
    (key, trainingId, number) [unique]
  }
}

Table Exercise {
  id String [pk]
  ref ExerciseReference [not null]
  refId String [not null]
  load Float
  reps Int
  sets Int
  trainingGroups TrainingGroup [not null]
  index Int
  tempo Tempo
  combinedExercises CombinedExercise [not null]
}

Table CombinedExercise {
  id String [pk]
  exercises Exercise [not null]
  index Int
  trainingGroups TrainingGroup [not null]
}

Table ExerciseReference {
  id String [pk]
  name String [unique, not null]
  exercises Exercise [not null]
  groups Group[] [not null]
  createdBy User [not null]
  createdByUserId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table ExerciseToTrainingGroup {
  exercisesId String [ref: > Exercise.id]
  traininggroupsId String [ref: > TrainingGroup.id]
}

Table CombinedExerciseToTrainingGroup {
  combinedexercisesId String [ref: > CombinedExercise.id]
  traininggroupsId String [ref: > TrainingGroup.id]
}

Table CombinedExerciseToExercise {
  combinedexercisesId String [ref: > CombinedExercise.id]
  exercisesId String [ref: > Exercise.id]
}

Enum Role {
  USER
  ADMIN
}

Enum Tempo {
  ONE2ONE
  ONE2TWO
  ONE2THREE
  ONE2FOUR
}

Enum Group {
  CHEST
  BACK
  TRICEPS
  BICEPS
  LEGS
  CALVES
  COMPLEX
  SHOULDERS
}

Ref: Training.userId > User.id

Ref: Training.createdByUserId > User.id

Ref: TrainingGroup.trainingId > Training.id

Ref: Exercise.refId > ExerciseReference.id

Ref: ExerciseReference.createdByUserId > User.id